# budgie-lightpad-applet

./: README.md  meson.build
debian/: changelog  control  copyright  files  rules
src/: IconChooser.vala  Lightpad.plugin  Lightpad.vala  meson.build  plugin.gresource.xml  settings.ui
